// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ControllerForm/GridFormControl AllGrid smoke-test 1`] = `
<div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 css-13i4rnv-MuiGrid-root">
  <div class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root">
    <div>
      aaa
    </div>
  </div>
</div>
`;

exports[`components/ControllerForm/GridFormControl Primary smoke-test 1`] = `
<div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-13i4rnv-MuiGrid-root">
  <div class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root">
    <div>
      aaa
    </div>
  </div>
</div>
`;
